--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <script src="src/index.js"></script>
+    <script src="src/index.js" defer></script>
   </head>
 
   <body></body>
