--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="src/index.js" defer></script>
   </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <body></body>
 </html>
